# codex-dashboard

./: .env.example  README.md  plan.md
backend/: pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/db/: session.py
backend/app/db/models/: __init__.py  base.py  dashboard.py  tokens.py  user.py
backend/app/routers/: auth.py  dashboard.py
backend/app/schemas/: auth.py  dashboard.py  user.py
backend/app/services/: auth.py  email.py  oauth.py  security.py
backend/app/tests/: conftest.py  test_auth.py  test_dashboard.py
backend/app/utils/: rate_limiter.py  tokens.py
frontend/: jest.config.js  package.json  tsconfig.json
frontend/app/: layout.tsx  page.tsx
frontend/app/api/: auth.ts  dashboard.ts
frontend/app/auth/forgot-password/: page.tsx
frontend/app/auth/login/: page.tsx
frontend/app/auth/register/: page.tsx
frontend/app/auth/reset-password/[token]/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/dashboard/components/: DashboardShell.tsx  WidgetCard.tsx
frontend/components/forms/: AuthForm.tsx
frontend/components/layout/: Header.tsx
frontend/hooks/: useAuth.ts  useDashboard.ts
frontend/lib/: auth.ts  dashboard.ts  httpClient.ts  types.ts  validators.ts
frontend/styles/: globals.css
frontend/tests/: auth.test.tsx  dashboard.test.tsx
