[project]
name = "codex-dashboard-backend"
version = "0.1.0"
description = "Codex Dashboard FastAPI backend"
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy>=2.0",
    "asyncpg",
    "alembic",
    "pydantic",
    "passlib[bcrypt]",
    "argon2-cffi",
    "python-jose[cryptography]",
    "authlib",
    "httpx",
    "redis",
    "sib-api-v3-sdk",
    "sentry-sdk",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "faker",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
